--- a/app/views/catarse_bootstrap/projects/index.html.slim
+++ b/app/views/catarse_bootstrap/projects/index.html.slim
@@ -4,7 +4,7 @@
 section#hero-home.hero-full.hero-knowmore
 
 
-  /.margin-slogan-home
+  .margin-slogan-home
   
     .fontweight-semibold.u-marginbottom-20.u-marginleft-t.fontsize-jumbo = t('.page_title')
     .fontweight-semibold.u-marginbottom-20.u-marginleft-t.fontsize-jumbo = t('.page_subtitle')
