ereased catarse ref

--- a/app/views/catarse_bootstrap/users/_dashboard_contributions.html.slim
+++ b/app/views/catarse_bootstrap/users/_dashboard_contributions.html.slim
@@ -3,7 +3,7 @@
     .w-row.u-margintop-30.u-text-center
       .w-col.w-col-3
       .w-col.w-col-6
-        .fontsize-large.u-marginbottom-30 Você ainda não apoiou nenhum projeto no&nbsp;Catarse...
+        .fontsize-large.u-marginbottom-30 Você ainda não apoiou nenhuma campanha na&nbsp;Entropia Coletiva.
         .w-row
           .w-col.w-col-3
           .w-col.w-col-6
