--- a/app/views/catarse_bootstrap/users/edit.html.slim
+++ b/app/views/catarse_bootstrap/users/edit.html.slim
@@ -57,7 +57,7 @@
               .w-row.u-margintop-30.u-text-center
                 .w-col.w-col-3
                 .w-col.w-col-6
-                  .fontsize-large.u-marginbottom-30 Você ainda não criou nenhum projeto no Catarse. Acredite nos seus sonhos!  
+                  .fontsize-large.u-marginbottom-30 Você ainda não criou nenhuma campanha na Entropia Coletiva. Mostre sua ciência para o mundo!  
                   .w-row
                     .w-col.w-col-3
                     .w-col.w-col-6
