space for file name

--- a/app/assets/stylesheets/catarse_bootstrap/_webflow.scss
+++ b/app/assets/stylesheets/catarse_bootstrap/_webflow.scss
@@ -331,6 +331,11 @@ textarea.w-select {
   width: 33.33333333%;
 }
 
+
+.w-col-4_3 {
+  width: 58%;
+}
+
 .w-col-4_2 {
   width: 33.33333333%;
   padding-top: 65px;
