--- a/app/views/catarse_bootstrap/users/_dashboard_about_me.html.slim
+++ b/app/views/catarse_bootstrap/users/_dashboard_about_me.html.slim
@@ -4,19 +4,28 @@
       .w-row
         .w-col.w-col-10.w-col-push-1
           = render 'devise/shared/alert'
+
+          .w-row.u-marginbottom-30.card.card-terciary
+            .w-col.w-col-5.w-sub-col
+              label.field-label.fontweight-semibold   Nome
+              label.field-label.fontsize-smallest.fontcolor-secondary   Esse é o nome que os outros usuários irão ver no seu perfil público
+            .w-col.w-col-7
+              = form.input_field :name, as: :string, class: 'positive'
+
+
           .w-form
               .w-row.u-marginbottom-30.card.card-terciary
                 .w-col.w-col-5.w-sub-col
                   label.field-label.fontweight-semibold   Imagem do perfil
                   label.field-label.fontsize-smallest.fontcolor-secondary   Essa imagem será utilizada como a miniatura de seu perfil (PNG, JPG tamanho 280 x 280)
-                .w-col.w-col-4.w-sub-col
+                .w-col.w-col-4_3.w-sub-col
                   = form.input :uploaded_image, label: '', as: :file, required: false, hint: (@user.uploaded_image.present? ? image_tag(@user.uploaded_image.thumb_avatar.url, size: '220x172#') : '' ) 
 
               .w-row.u-marginbottom-30.card.card-terciary
                 .w-col.w-col-5.w-sub-col
                   label.field-label.fontweight-semibold   Imagem de capa do perfil
                   label.field-label.fontsize-smallest.fontcolor-secondary   Essa imagem será utilizada como fundo da capa do seu perfil público (PNG ou JPG). Caso você não envie nenhum imagem aqui, utilizaremos sua imagem de perfil como alternativa.
-                .w-col.w-col-4.w-sub-col
+                .w-col.w-col-4_3.w-sub-col
                   = form.input :cover_image, label: '', as: :file, required: false, hint: (@user.cover_image.present? ? image_tag(@user.cover_image.base.url, size: '220x172#') : '' ) 
 
           /- if current_user && current_user.admin?
@@ -32,12 +41,8 @@
                     .fontcolor-secondary.fontsize-smaller &nbsp;&nbsp;.entropiacoletiva.com
                 
 
-          .w-row.u-marginbottom-30.card.card-terciary
-            .w-col.w-col-5.w-sub-col
-              label.field-label.fontweight-semibold   Nome
-              label.field-label.fontsize-smallest.fontcolor-secondary   Esse é o nome que os outros usuários irão ver no seu perfil público
-            .w-col.w-col-7
-              = form.input_field :name, as: :string, class: 'positive'
+
+
           .w-form.card.card-terciary.u-marginbottom-30
               .w-row.u-marginbottom-10
                 .w-col.w-col-5.w-sub-col
