--- a/app/views/catarse_bootstrap/users/edit.html.slim
+++ b/app/views/catarse_bootstrap/users/edit.html.slim
@@ -18,17 +18,19 @@
   
   nav.dashboard-nav.u-text-center style='z-index: 10; position: relative;'
     .w-container
+      = link_to '#about_me', id: 'dashboard_about_me_link', class: 'dashboard-nav-link ' , data: {target: '#dashboard_about_me' } do
+        | Sobre você    
+
       = link_to '#contributions', id: 'dashboard_contributions_link', class: 'dashboard-nav-link ' , data: {target: '#dashboard_contributions' } do
         | Apoiados
 
       = link_to '#projects', id: 'dashboard_projects_link', class: 'dashboard-nav-link ' , data: {target: '#dashboard_projects' } do
         | Criados
 
-      = link_to '#about_me', id: 'dashboard_about_me_link', class: 'dashboard-nav-link ' , data: {target: '#dashboard_about_me' } do
-        | Sobre você
+
 
       = link_to '#settings', id: 'dashboard_settings_link', class: 'dashboard-nav-link ' , data: {target: '#dashboard_settings' } do
-        | Dados e endereço
+        | Endereço e segurança
       
       = link_to '#notifications', id: 'dashboard_notifications_link', class: 'dashboard-nav-link ' , data: {target: '#dashboard_notifications' } do
         | Notificações
