--- a/app/assets/stylesheets/catarse_bootstrap/_main.scss
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.scss
@@ -901,7 +901,6 @@ margin-right:auto;
   font-size: 54px;
   line-height: 100%;
   padding-top: 50px;
-
 }
 
 .fontsize-smallest-guia {
@@ -1174,7 +1173,7 @@ margin-right:auto;
   background-color: white;
 }
 .card {
-  margin-bottom: -1px;
+  margin-bottom: 11px;
   padding: 18px;
   border: 1px solid #ddd;
   background-color: #f4fff4;
@@ -3148,6 +3147,12 @@ h2 {
     padding: 20px 0px;
   }
 
+  .fontsize-largest2 {
+    font-size: 54px;
+    line-height: 100%;
+    padding-top: 1px;
+  }
+
 
   .u-marginleft-t {
   margin-left: 14px;
@@ -3212,7 +3217,7 @@ h2 {
     display: inline-block;
     margin-right: 5px;
     padding: 6px 10px;
-    font-size: 13px;
+    font-size: 19px;
   }
   .header-link:hover {
     display: inline-block;
@@ -3623,6 +3628,12 @@ h2 {
    height: 50px;
   }
 
+  .fontsize-largest2 {
+    font-size: 54px;
+    line-height: 100%;
+    padding-top: 1px;
+  }
+
 
 
 
@@ -3715,8 +3726,8 @@ h2 {
     margin-top: 38px;
   }
   .header-link {
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 30px;
+    margin-left: 30px;
   }
   .pre-header {
     padding-top: 19px;
@@ -4220,6 +4231,11 @@ h2 {
     padding-top: 40px;
   }
 
+  .fontsize-largest2 {
+    font-size: 54px;
+    line-height: 100%;
+    padding-top: 1px;
+  }
 
   .u-marginbottom-20-logo {
    margin-bottom: 20px;
@@ -4285,11 +4301,11 @@ h2 {
     margin-top: 60px;
   }
   .header-link {
-    margin-right: 5px;
-    margin-left: 5px;
+    margin-right: 20px;
+    margin-left: 20px;
     padding-right: 6px;
     padding-left: 6px;
-    font-size: 11px;
+    font-size: 17px;
   }
   .headingcenter {
     font-size: 24px;
