--- a/app/views/catarse_bootstrap/users/_dashboard_settings.html.slim
+++ b/app/views/catarse_bootstrap/users/_dashboard_settings.html.slim
@@ -15,7 +15,7 @@
           .divider.u-marginbottom-20
 
           .fontsize-base.fontweight-semibold Endereço
-          .fontsize-small.u-marginbottom-20 Esse é o endereço que foi informado ao realizar seu último apoio. Se você mudou de endereço, altere aqui e, caso você esteja aguardando alguma recompensa, avise por email ao realizador do projeto apoiado.
+          .fontsize-small.u-marginbottom-20 Esse é o endereço que foi informado ao realizar seu último apoio. Se você mudou de endereço, altere aqui.
           .w-row  
             = form.association :country, as: :select, label_html:{class: 'field-label fontweight-semibold'}, wrapper_html: {class: 'w-col w-col-6 w-sub-col'}, input_html: {class: 'w-select positive', required: true}, required: true, label: 'País'
             .w-col.w-col-6
