--- a/app/views/catarse_bootstrap/shared/_footer_big.html.slim
+++ b/app/views/catarse_bootstrap/shared/_footer_big.html.slim
@@ -42,4 +42,4 @@ footer.main-footer.main-footer-neg
   .w-container
     .footer-full-copyleft
       = image_tag "logo-footer.png", class: "u-marginbottom-20-logo" 
-      .lineheight-loose: a.link-footer-inline[href="pt"] Faça a ciência acontecer  | #{Date.today.year} | 
+      .lineheight-loose: Faça Faça a ciência acontecer  | #{Date.today.year} | 
