--- a/app/views/catarse_bootstrap/projects/edit.html.slim
+++ b/app/views/catarse_bootstrap/projects/edit.html.slim
@@ -64,13 +64,13 @@
             #dashboard_reports.content.w-hidden data-path=project_metrics_path(@project) data-page_title="#{t('.reports')}"
               .results
 
-          #dashboard_user_about.content.w-hidden data-page_title="#{t('.user_about')}" data-page_subtitle="#{t('.user_about_subtitle')}"
+          #dashboard_user_about.content.w-hidden 
             = render 'dashboard_user_about'
 
           #dashboard_preview.content.w-hidden
             = render 'dashboard_preview'
 
-          #dashboard_user_settings.content.w-hidden data-page_title="#{t('.user_settings')}" data-page_subtitle="#{t('.user_settings_subtitle')}"
+          #dashboard_user_settings.content.w-hidden 
             = render 'dashboard_user_settings'
 
 = render 'shared/footer'
