--- a/app/views/catarse_bootstrap/pages/press.html.slim
+++ b/app/views/catarse_bootstrap/pages/press.html.slim
@@ -9,16 +9,45 @@
     .u-text-center.u-marginbottom-20.fontsize-largest = t('.hero.title')
 
 .section-large.bg-gray
-  .w-container
+  .w-container.u-text-center
     .w-row
       .w-col.w-col-8.w-col-push-2
         .u-marginbottom-20.fontsize-large = t('.abstract.title')
+        
 .section-large
-  .w-container
+  .w-container.u-text-center
     .w-row
       .w-col.w-col-8.w-col-push-2
         .fontsize-large.fontweight-semibold.u-marginbottom-10 = t('.history.title')
         .fontsize-large.u-marginbottom-20 = t('.history.subtitle')
+
+.section-large.bg-gray
+  .w-container.u-text-center
+    .w-row
+      .w-col.w-col-8.w-col-push-2
+        .fontsize-large.fontweight-semibold.u-marginbottom-10 = t('.history.title2')
+        .fontsize-large.u-marginbottom-20 = t('.history.subtitle2')
+
+
+.section-large
+  .w-container.u-text-center
+    .w-row
+      .w-col.w-col-8.w-col-push-2
+        .fontsize-large.fontweight-semibold.u-marginbottom-10 = t('.history.title3')
+        .fontsize-large.u-marginbottom-20 = t('.history.subtitle3')
+
+
+.section-large.bg-gray
+  .w-container.u-text-center
+    .w-row
+      .w-col.w-col-8.w-col-push-2
+        .fontsize-large.fontweight-semibold.u-marginbottom-10 = t('.history.title4')
+        .fontsize-large.u-marginbottom-20 = t('.history.subtitle4')
+
+
+
+
+
 /        a.alt-link.fontsize-large href="https://docs.google.com/document/d/1g29ITtXrqBnThAWDHdPz1KqCrmIAb07urVF8Ru6735Q/edit?usp=sharing" target="_blank"  = t('.history.cta_html')
 /.section-large.bg-gray
   .w-container
