--- a/app/views/catarse_bootstrap/shared/_header2.html.slim
+++ b/app/views/catarse_bootstrap/shared/_header2.html.slim
@@ -36,4 +36,6 @@ header class="main-header w-section #{'alert' if can_display_pending_refund_aler
 
   = render 'shared/analytics'
 
+  <meta name="viewport" content="width=device-width, user-scalable=yes">
+
   
