--- a/app/views/catarse_bootstrap/shared/_header_big.html.slim
+++ b/app/views/catarse_bootstrap/shared/_header_big.html.slim
@@ -35,3 +35,4 @@
 = render 'shared/header', overlayer: (defined?(overlayer) && overlayer ? true : false)
 = render 'shared/zopim'
 = render 'shared/analytics'
+<meta name="viewport" content="width=device-width, user-scalable=yes">
