--- a/app/views/catarse_bootstrap/shared/_header_bootstrap_v1.html.slim
+++ b/app/views/catarse_bootstrap/shared/_header_bootstrap_v1.html.slim
@@ -56,3 +56,4 @@ header
         = link_to t('channels.header.signup'), new_user_registration_url, class: 'header-nav-item'
         = link_to t('channels.header.signin'), new_user_session_url, class: 'header-nav-item'
 
+<meta name="viewport" content="width=device-width, user-scalable=yes">
