--- a/app/views/catarse_bootstrap/shared/_header_big2.html.slim
+++ b/app/views/catarse_bootstrap/shared/_header_big2.html.slim
@@ -18,7 +18,6 @@
 
 
 
-
   
 
 
@@ -35,3 +34,6 @@
 = render 'shared/header2', overlayer: (defined?(overlayer) && overlayer ? true : false)
 = render 'shared/zopim'
 = render 'shared/analytics'
+
+
+<meta name="viewport" content="width=device-width, user-scalable=yes">
