e-mail sendgrid image

--- a/app/views/catarse_bootstrap/devise/mailer/reset_password_instructions.pt.html.slim
+++ b/app/views/catarse_bootstrap/devise/mailer/reset_password_instructions.pt.html.slim
@@ -9,6 +9,6 @@ br
 | Se algum problema acontecer, responda a esta mensagem diretamente ou fale conosco através do e-mail #{mail_to ::CatarseSettings[:email_contact]} 
 br
 br
-| Abraços,
+| Saudações,
 br
 = CatarseSettings[:company_name]
