--- a/app/views/catarse_bootstrap/layouts/email.html.slim
+++ b/app/views/catarse_bootstrap/layouts/email.html.slim
@@ -27,8 +27,8 @@ html
                                     - if content_for?(:email_logo)
                                       = yield(:email_logo)
                                     - else
-                                      a href="http://catarse.me" style="color:#f69219" target="_blank"
-                                        img alt="Catarse" border="0" height="121" src="https://gallery.mailchimp.com/ebfcd0d16dbb0001a0bea3639/images/logo_notificacoes_div3.png" width="600"
+                                      a href="http://entropiacoletiva.com" style="color:#f69219" target="_blank"
+                                        img alt="Entropia Coletiva" border="0" height="121" src="/images/email.png" width="600"
                     tr
                       td align="center" valign="top"
                         table border="0" cellpadding="0" cellspacing="0" style="border-radius:6px;background-color:#ffffff;width:600px;"
