--- a/app/views/catarse_bootstrap/layouts/email.html.slim
+++ b/app/views/catarse_bootstrap/layouts/email.html.slim
@@ -28,7 +28,7 @@ html
                                       = yield(:email_logo)
                                     - else
                                       a href="http://entropiacoletiva.com" style="color:#f69219" target="_blank"
-                                        img alt="Entropia Coletiva" border="0" height="121" src="/images/email.png" width="600"
+                                        img alt="Entropia Coletiva" border="0" height="121" src="https://uploaddeimagens.com.br/imagens/email-png--113" width="600"
                     tr
                       td align="center" valign="top"
                         table border="0" cellpadding="0" cellspacing="0" style="border-radius:6px;background-color:#ffffff;width:600px;"
