--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/_contribution_data.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/_contribution_data.html.slim
@@ -31,15 +31,15 @@ p
   | CPF/CNPJ do realizador: #{owner.owner_document}
 
 p
-  ' É importante ressaltar que o Catarse é apenas intermediador desse processo,
+  ' É importante ressaltar que a Entropia Coletiva é apenas intermediador desse processo,
   ' portanto, se tiver alguma dúvida em relação ao projeto ou recompensa selecionada entre
   ' em contato diretamente com o realizador através do e-mail #{mail_to owner.email}.
   ' Ah! Lembre-se de guardar este email, pois ele contém informações importantes
   ' a respeito da sua contribuição ao projeto.
-p Se ficou com alguma dúvida, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_contact]}
+p Se ficou com alguma dúvida, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_contact]}
 
 p
   | Um abraço e muito obrigado,
   br/
-  | #{CatarseSettings[:company_name]}
+  | #{Entropia ColetivaSettings[:company_name]}
 
