--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_canceled_after_confirmed.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_canceled_after_confirmed.html.slim
@@ -12,4 +12,4 @@ p
     - if %w(waiting_funds failed).include?(project.state)
     |&nbsp;E o projeto já terminou o prazo para novos apoios.
 p
-  |Verifique no site do meio de pagamento o real status da transação e, se o apoio constar como confirmado, confirme-o no site do Catarse (adm/contributions)
+  |Verifique no site do meio de pagamento o real status da transação e, se o apoio constar como confirmado, confirme-o no site da Entropia Coletiva (adm/contributions)
