--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_project_unsuccessful_slip.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_project_unsuccessful_slip.html.slim
@@ -5,7 +5,7 @@
 |Olá, #{contribution.user.name}!
 br
 br
-| Infelizmente o projeto #{link_to(contribution.project.name, project_by_slug_url(permalink: contribution.project.permalink))} que você apoiou não atingiu a meta estabelecida e não foi financiado no #{CatarseSettings[:company_name]}.
+| Infelizmente o projeto #{link_to(contribution.project.name, project_by_slug_url(permalink: contribution.project.permalink))} que você apoiou não atingiu a meta estabelecida e não foi financiado no #{Entropia ColetivaSettings[:company_name]}.
 br
 br
 | Como o seu apoio foi efetuado através de boleto, realizaremos o reembolso diretamente na conta em até 30 dias.
@@ -25,11 +25,11 @@ br
 | Assim que o reembolso for feito, você receberá um e-mail de confirmação da operação.
 br
 br
-| Se ficou com alguma dúvida, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_contact]} 
+| Se ficou com alguma dúvida, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_contact]} 
 | e nos informe a chave de identificação do seu apoio, que é: #{contribution.payment_id}
 br
 br
 |Um abraço,
 br
-| #{CatarseSettings[:company_name]}
+| #{Entropia ColetivaSettings[:company_name]}
 
