--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/payment_slip.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/payment_slip.html.slim
@@ -9,9 +9,9 @@ p
   = link_to 'clicar aqui', contribution.details.ordered.first.decorate.display_slip_url
   | .
 
-p O prazo de vencimento do boleto é de 2 dias corridos. Para alterar a data de vencimento, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_contact]}
+p O prazo de vencimento do boleto é de 2 dias corridos. Para alterar a data de vencimento, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_contact]}
 
 p 
   | Um abraço,
   br/
-  | #{CatarseSettings[:company_name]}
+  | #{Entropia ColetivaSettings[:company_name]}
