--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_owner_contribution_confirmed.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_owner_contribution_confirmed.html.slim
@@ -2,7 +2,7 @@
 - confirmed_contributions_today = project.contributions.confirmed_last_day
 
 - project_link = project_by_slug_url(permalink: project.permalink)
-- company_name = CatarseSettings[:company_name]
+- company_name = Entropia ColetivaSettings[:company_name]
 
 | Olá, <strong>#{project.user.decorate.display_name}</strong>!
 br
@@ -32,7 +32,7 @@ table width="500" border="1" cellpadding="10" cellspacing="0" style='font-size: 
         td= contribution.reward.try(:decorate).try(:display_description)
 br/
 br/
-| Lembrando que você pode tirar dúvidas conosco respondendo diretamente a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_projects] }
+| Lembrando que você pode tirar dúvidas conosco respondendo diretamente a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_projects] }
 br/
 br/
 | Um abraço,
