--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_received_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_received_subject.text.slim
@@ -1,1 +1,1 @@
-|O seu rascunho de projeto foi criado no #{CatarseSettings[:company_name]}
+|O seu rascunho de projeto foi criado no #{Entropia ColetivaSettings[:company_name]}
