--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_completed_credit_card.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_completed_credit_card.html.slim
@@ -1,7 +1,7 @@
 - contribution = @notification.contribution
 - detail = contribution.details.ordered.first
-- company_name = CatarseSettings[:company_name]
-- contact_email = CatarseSettings[:email_contact]
+- company_name = Entropia ColetivaSettings[:company_name]
+- contact_email = Entropia ColetivaSettings[:email_contact]
 |Olá, <strong>#{contribution.user.display_name}</strong>!
 br
 br
@@ -14,7 +14,7 @@ br
 |Data do reembolso: #{I18n.l detail.refunded_at}
 br
 br
-|Identificação na fatura do cartão de crédito: “Estorno do Catarse”
+|Identificação na fatura do cartão de crédito: “Estorno da Entropia Coletiva”
 br
 br
 |Se ficou com alguma dúvida, entre em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_to contact_email}. Não esqueça de nos informar a chave de identificação do seu apoio, que é: #{detail.payment_id}
