--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_moip.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_moip.html.slim
@@ -5,7 +5,7 @@ br
 br
 |Para muitos casos, não tínhamos uma solução simples para fazer o reembolso. Agora estamos em um processo para otimizar essa etapa. Você faz parte do primeiro grupo para o qual iremos fazer o reembolso direto na conta bancária. :-)
 br
-|Pra isso, precisaremos que vocês preencham o formulário abaixo com seus dados bancários: #{link_to 'http://bit.ly/reembolsoCatarse', 'http://bit.ly/reembolsoCatarse'}
+|Pra isso, precisaremos que vocês preencham o formulário abaixo com seus dados bancários: #{link_to 'http://bit.ly/reembolsoEntropia Coletiva', 'http://bit.ly/reembolsoEntropia Coletiva'}
 br
 |O valor do apoio que você fez e que será reembolsado é de: R$#{user.contributions.where(state:'requested_refund').sum(:value)}.
 br
