--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/reminder.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/reminder.html.slim
@@ -1,6 +1,6 @@
 - project = @notification.project
 - user = @notification.user
-- company_name = CatarseSettings[:company_name]
+- company_name = Entropia ColetivaSettings[:company_name]
 
 |Olá, <strong>#{user.display_name}</strong>!
 br
