--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k_project_owner_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k_project_owner_subject.text.slim
@@ -1,2 +1,2 @@
-|Veja o vídeo dos 200 mil apoiadores no Catarse e use como material de campanha
+|Veja o vídeo dos 200 mil apoiadores na Entropia Coletiva e use como material de campanha
 
