--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/categorized_projects_of_the_week.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/categorized_projects_of_the_week.html.slim
@@ -4,7 +4,7 @@
 | Olá #{user.name},
 br/
 br/
-| Novidades dessa semana na categoria #{category.name_pt} do Catarse
+| Novidades dessa semana na categoria #{category.name_pt} da Entropia Coletiva
 br/
 br/
 - category.projects.of_current_week.with_state('online').each do |project|
@@ -17,7 +17,7 @@ br/
 br/
 |Um abraço,
 br/
-| #{CatarseSettings[:company_name]}
+| #{Entropia ColetivaSettings[:company_name]}
 br/
 br/
 | #{link_to 'Descadastrar', unsubscribe_category_url(category), target:'__blank'} o recebimento de projetos recentes dessa categoria.
