--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_canceled_slip.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_canceled_slip.html.slim
@@ -1,6 +1,6 @@
 - contribution = @notification.contribution
-- company_name = CatarseSettings[:company_name]
-- contact_email = CatarseSettings[:email_contact]
+- company_name = Entropia ColetivaSettings[:company_name]
+- contact_email = Entropia ColetivaSettings[:email_contact]
 
 |Olá, <strong>#{contribution.user.display_name}</strong>!
 br
