--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_project_unsuccessful_slip_no_account_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/contribution_project_unsuccessful_slip_no_account_subject.text.slim
@@ -1,1 +1,1 @@
-|Ação necessária! O Catarse precisa dos seus dados para devolver seu dinheiro
+|Ação necessária! a Entropia Coletiva precisa dos seus dados para devolver seu dinheiro
