--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/new_user_registration.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/new_user_registration.html.slim
@@ -7,7 +7,7 @@
 
 br/
 br/
-| Bem-vindo ao Catarse. A comunidade de financiamento coletivo mais receptiva do Brasil!
+| Bem-vindo aa Entropia Coletiva. A comunidade de financiamento coletivo mais receptiva do Brasil!
 br/
 br/
 | Só para você não se esquecer, o seu email de acesso é: #{user.email}
@@ -31,14 +31,14 @@ br/
 br/
 center
   = link_to explore_url, target: '__blank' do
-    = image_tag "#{CatarseSettings[:base_url]}/assets/catarse_bootstrap/botao_bemvindo_PT_big.png"
+    = image_tag "#{Entropia ColetivaSettings[:base_url]}/assets/Entropia Coletiva_bootstrap/botao_bemvindo_PT_big.png"
 
 
 br
 br
 | Abraços,
 br
-= CatarseSettings[:company_name]
+= Entropia ColetivaSettings[:company_name]
 
   
 
