--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/pending_payment.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/pending_payment.html.slim
@@ -19,9 +19,9 @@ br
 | Caso o motivo para não ter concluído seu apoio foi algum problema técnico, recomendamos tentar novamente utilizando outro navegador.
 br
 br
-| Se o problema persistir, entre em contato imediatamente respondendo a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_contact]}
+| Se o problema persistir, entre em contato imediatamente respondendo a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_contact]}
 br
 br
 |Um abraço,
 br
-|#{CatarseSettings[:company_name]}
+|#{Entropia ColetivaSettings[:company_name]}
