--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_approved.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_approved.html.slim
@@ -1,7 +1,7 @@
 - project = @notification.project
 
 - project_link = edit_project_url(project)
-- company_name = CatarseSettings[:company_name]
+- company_name = Entropia ColetivaSettings[:company_name]
 
 | Olá, #{project.user.name}, o <strong>#{link_to 'seu projeto foi aprovado', project_link}</strong> e pode ir ao ar quando você desejar.
 br/
@@ -25,7 +25,7 @@ br/
 strong
   | 3. E apertar o botão de publicar o projeto. 
 br/
-= image_tag 'https://s3.amazonaws.com/cdn.catarse/notifications_assets/btn-publish.gif', width: '600'
+= image_tag 'https://s3.amazonaws.com/cdn.Entropia Coletiva/notifications_assets/btn-publish.gif', width: '600'
 br/
 br/
 strong
@@ -33,10 +33,10 @@ strong
 br/
 | - Após a públicação é Tudo-ou-Nada e alguns aspectos do projeto não podem ser alterados! 
 br/
-| - Só cobramos nossa taxa de 13% caso você tenha sucesso em sua captação! Entenda como fazemos o #{link_to 'repasse do dinheiro', 'http://suporte.catarse.me/hc/pt-br/articles/202037493-Como-ser%C3%A1-feito-o-repasse-do-dinheiro-'}.
+| - Só cobramos nossa taxa de 13% caso você tenha sucesso em sua captação! Entenda como fazemos o #{link_to 'repasse do dinheiro', 'http://suporte.Entropia Coletiva.me/hc/pt-br/articles/202037493-Como-ser%C3%A1-feito-o-repasse-do-dinheiro-'}.
 br/
 br/
-| Lembrando que você pode tirar dúvidas conosco respondendo diretamente a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_projects]}
+| Lembrando que você pode tirar dúvidas conosco respondendo diretamente a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_projects]}
 br/
 br/
 | Um grande abraço,
