--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_success.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_success.html.slim
@@ -1,7 +1,7 @@
 - project = @notification.project
 
 - project_link = edit_project_url(project)
-- company_name = CatarseSettings[:company_name]
+- company_name = Entropia ColetivaSettings[:company_name]
 
 | Uhuu, #{project.user.name},
 br/
@@ -20,22 +20,22 @@ br/
 | <strong>ATENÇÃO</strong>: Para fazer o repasse utilizaremos as informações cadastrais e bancárias preenchidas na aba Conta do painel de controle do seu projeto. <strong>Certifique-se de que os dados estão corretos</strong>.
 br/
 strong Confira:
-= link_to 'Como será feito o repasse?', 'http://suporte.catarse.me/hc/pt-br/articles/202037493-Como-ser%C3%A1-feito-o-repasse-do-dinheiro-', target: '__blank'
+= link_to 'Como será feito o repasse?', 'http://suporte.Entropia Coletiva.me/hc/pt-br/articles/202037493-Como-ser%C3%A1-feito-o-repasse-do-dinheiro-', target: '__blank'
 br/
 br/
 | 2 - <strong>Organização é tudo!</strong> Na <strong>aba Relatórios</strong>, baixe planilhas com as <strong>informações sobre os seus apoiadores</strong> e comece a organizar a <strong>entrega das recompensas!</strong> 
 br/
 br/
-= image_tag 'https://s3.amazonaws.com/cdn.catarse/notifications_assets/reports.gif', width: 600
+= image_tag 'https://s3.amazonaws.com/cdn.Entropia Coletiva/notifications_assets/reports.gif', width: 600
 br/
 br/
 | <strong>3 - Converse com seus apoiadores hoje, amanhã e sempre!</strong> As pessoas demonstraram respeito por você ao te apoiar financeiramente e esperam o mesmo em troca. <strong>A Aba de novidades</strong> ficará disponível para sempre. <strong>Procure fazer postagens de maneira recorrente</strong> mantendo seus apoiadores informados sobre o andamento do projeto. 
 br/
 br/
-= image_tag 'https://s3.amazonaws.com/cdn.catarse/notifications_assets/post.gif', width: 600
+= image_tag 'https://s3.amazonaws.com/cdn.Entropia Coletiva/notifications_assets/post.gif', width: 600
 br/
 br/
-| Se ficou com alguma dúvida, responda a esta mensagem diretamente ou fale conosco através do e-mail #{mail_to CatarseSettings[:email_projects]}. Caso precise falar via telefone estaremos a disposição de segunda à sexta das 14h às 18h no telefone  (11) 98414-0173.
+| Se ficou com alguma dúvida, responda a esta mensagem diretamente ou fale conosco através do e-mail #{mail_ta Entropia ColetivaSettings[:email_projects]}. Caso precise falar via telefone estaremos a disposição de segunda à sexta das 14h às 18h no telefone  (11) 98414-0173.
 br/
 br/
 | Um abraço apertado de parabéns!
