--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_unsuccessful.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_unsuccessful.html.slim
@@ -1,7 +1,7 @@
 - project = @notification.project
 
 - project_link = edit_project_url(project)
-- company_name = CatarseSettings[:company_name]
+- company_name = Entropia ColetivaSettings[:company_name]
 
 |Oi, #{project.user.display_name},
 br/
@@ -9,10 +9,10 @@ br/
 | Infelizmente o projeto #{link_to project.name, project_link } não alcançou a meta de financiamento no #{company_name}.
 br/
 br/
-| Fique tranquilo, todos os seus apoiadores já receberam um email com instruções sobre o #{link_to 'processo de reembolso', 'http://suporte.catarse.me/hc/pt-br/articles/202365507-Regras-e-funcionamento-dos-reembolsos-estornos', target: '__blank' }.
+| Fique tranquilo, todos os seus apoiadores já receberam um email com instruções sobre o #{link_to 'processo de reembolso', 'http://suporte.Entropia Coletiva.me/hc/pt-br/articles/202365507-Regras-e-funcionamento-dos-reembolsos-estornos', target: '__blank' }.
 br/
 br/
-strong Quer ajudar a melhorar o Catarse?
+strong Quer ajudar a melhorar a Entropia Coletiva?
 br/
 | Seu projeto pode não ter atingido a meta mas com certeza você aprendeu alguma coisa e pode tirar grande proveito dessa experiência se quiser! Compartilhe esse aprendizado conosco!
 br/
