--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_visible.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_visible.html.slim
@@ -2,7 +2,7 @@
 - project = @notification.project
 
 - project_link = edit_project_url(project)
-- company_name = CatarseSettings[:company_name]
+- company_name = Entropia ColetivaSettings[:company_name]
 
 |Olá, #{user.decorate.display_name}.
 br/
@@ -12,7 +12,7 @@ br/
 br/
 | É muito importante se planejar para uma campanha. Mas se você não planejou suas ações anteriormente, não perca tempo.
 '  A hora é essa! Estamos aqui para te ajudar! Para conversar sobre estratégias de comunicação com nossa equipe e receber 
-'  sugestões sobre como agir na sua campanha, responda esse email ou envie uma mensagem para #{mail_to CatarseSettings[:email_projects]}.
+'  sugestões sobre como agir na sua campanha, responda esse email ou envie uma mensagem para #{mail_ta Entropia ColetivaSettings[:email_projects]}.
 br/
 br/
 | Confira nosso #{link_to 'GUIA DE REALIZADORES', guides_url} para saber mais sobre como conduzir uma campanha!
@@ -55,7 +55,7 @@ br/
 br/
 br/
 | Por favor </strong>não esqueça de incluir na sua lista de contatos os e-mails:</strong>
-'  #{mail_to CatarseSettings[:email_projects]} e #{mail_to CatarseSettings[:email_contact]} para evitar que nossas mensagens caiam na sua caixa de spam devido a filtros do seu email.
+'  #{mail_ta Entropia ColetivaSettings[:email_projects]} e #{mail_ta Entropia ColetivaSettings[:email_contact]} para evitar que nossas mensagens caiam na sua caixa de spam devido a filtros do seu email.
 br/
 br/
 | Um abraço,
