--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_visible_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/project_visible_subject.text.slim
@@ -1,1 +1,1 @@
-|O projeto #{@notification.project.name} está no ar no #{CatarseSettings[:company_name]}
+|O projeto #{@notification.project.name} está no ar no #{Entropia ColetivaSettings[:company_name]}
