--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_completed_slip.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_completed_slip.html.slim
@@ -1,7 +1,7 @@
 - contribution = @notification.contribution
 - detail = contribution.details.ordered.first
-- company_name = CatarseSettings[:company_name]
-- contact_email = CatarseSettings[:email_contact]
+- company_name = Entropia ColetivaSettings[:company_name]
+- contact_email = Entropia ColetivaSettings[:email_contact]
 - user = @notification.contribution.user
 - bank_account = user.bank_account
 
