--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_completed_slip_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_completed_slip_subject.text.slim
@@ -1,1 +1,1 @@
-| Reembolso efetuado! Devolução de apoio no Catarse realizada
+| Reembolso efetuado! Devolução de apoio na Entropia Coletiva realizada
