--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_moip_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/refund_moip_subject.text.slim
@@ -1,1 +1,1 @@
-Reembolso do seu apoio no Catarse direto na sua conta bancária :-)
+Reembolso do seu apoio na Entropia Coletiva direto na sua conta bancária :-)
