--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/reminder_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/reminder_subject.text.slim
@@ -1,1 +1,1 @@
-| Lembrete do Catarse! A campanha #{@notification.project.name} está terminando!
+| Lembrete da Entropia Coletiva! A campanha #{@notification.project.name} está terminando!
