--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/terms_update.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/terms_update.html.slim
@@ -3,8 +3,8 @@
 | Olá #{user.display_name},
 br/
 br/
-| Esse email é para notificar a recente atualização nos nossos #{link_to 'termos de uso', 'http://www.catarse.me/pt/terms-of-use', target: '__blank'} 
-'  e #{link_to 'política de privacidade', 'http://www.catarse.me/pt/privacy-policy', target: '__blank' } no Catarse. As mudanças estão relacionadas ao novo meio de pagamento que o Catarse está utilizando e passam a valer para projetos que entrarem no ar dia 10/11/2014.
+| Esse email é para notificar a recente atualização nos nossos #{link_to 'termos de uso', 'http://www.Entropia Coletiva.me/pt/terms-of-use', target: '__blank'} 
+'  e #{link_to 'política de privacidade', 'http://www.Entropia Coletiva.me/pt/privacy-policy', target: '__blank' } na Entropia Coletiva. As mudanças estão relacionadas ao novo meio de pagamento que a Entropia Coletiva está utilizando e passam a valer para projetos que entrarem no ar dia 10/11/2014.
 br/
 br/
 | Resumindo as mudanças:
@@ -18,18 +18,18 @@ br/
 br/
 | - Se o projeto não for financiado, reembolso do pagamento feito via boleto em até 10 dias úteis direto na conta bancária informada no momento do pagamento;
 br/
-| - opção de salvar os dados do cartão de crédito no perfil do Catarse.
+| - opção de salvar os dados do cartão de crédito no perfil da Entropia Coletiva.
 br/
 br/
-| Para ler todos os detalhes veja nosso #{link_to 'post no blog', 'http://blog.catarse.me/pode-parcelar-pode-e-salvar-o-cartao-e-automatizar-reembolsos-e-repasses/', target: '__blank'} ou 
-'  leia os #{link_to 'termos de uso', 'http://www.catarse.me/pt/terms-of-use', target: '__blank'} 
-'  e #{link_to 'política de privacidade', 'http://www.catarse.me/pt/privacy-policy', taget: '__blank'} atualizados.
+| Para ler todos os detalhes veja nosso #{link_to 'post no blog', 'http://blog.Entropia Coletiva.me/pode-parcelar-pode-e-salvar-o-cartao-e-automatizar-reembolsos-e-repasses/', target: '__blank'} ou 
+'  leia os #{link_to 'termos de uso', 'http://www.Entropia Coletiva.me/pt/terms-of-use', target: '__blank'} 
+'  e #{link_to 'política de privacidade', 'http://www.Entropia Coletiva.me/pt/privacy-policy', taget: '__blank'} atualizados.
 br/
 br/
-| Se ficou com alguma dúvida entre em contato conosco respondendo a este email ou através do #{mail_to CatarseSettings[:email_contact]}
+| Se ficou com alguma dúvida entre em contato conosco respondendo a este email ou através do #{mail_ta Entropia ColetivaSettings[:email_contact]}
 br/
 br/
 | Um abraço,
 br/
-| Catarse
+| Entropia Coletiva
 
