--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/user_deactivate.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/user_deactivate.html.slim
@@ -1,10 +1,10 @@
 p Olá #{@notification.user.name},
 
 p 
-  | Sua conta no Catarse já está desativada. Caso sinta saudades, você pode reativar a sua conta a qualquer momento, basta #{link_to('clicar aqui', reactivate_user_url(@notification.user, token: @notification.user.reactivate_token))} e voltar a apoiar ou realizar projetos incríveis.
+  | Sua conta na Entropia Coletiva já está desativada. Caso sinta saudades, você pode reativar a sua conta a qualquer momento, basta #{link_to('clicar aqui', reactivate_user_url(@notification.user, token: @notification.user.reactivate_token))} e voltar a apoiar ou realizar projetos incríveis.
 
 p 
-  | Qualquer dúvida você pode entrar em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_to CatarseSettings[:email_contact]}
+  | Qualquer dúvida você pode entrar em contato conosco respondendo a esta mensagem ou através do e-mail #{mail_ta Entropia ColetivaSettings[:email_contact]}
 
 p Um abraço,
-p Catarse
+p Entropia Coletiva
