--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k.html.slim
@@ -1,12 +1,12 @@
 = link_to 'https://www.youtube.com/watch?v=CRqXvKk5A1Q', target: :blank do
-  img src="https://s3.amazonaws.com/catarse.files/video.jpg"
+  img src="https://s3.amazonaws.com/Entropia Coletiva.files/video.jpg"
 
 p #{@notification.user.display_name},
 
 p
   'Você é o apoiador número <strong>#{@notification.user.contributor_number}</strong> 
    em um universo de mais de 200 mil pessoas incríveis que apoiaram projetos no 
-   Catarse nos últimos 4 anos e meio que estamos no ar. Reunir todas essas pessoas 
+   Entropia Coletiva nos últimos 4 anos e meio que estamos no ar. Reunir todas essas pessoas 
    é um marco simbólico, um sinal de que já trilhamos um longo caminho e uma motivação para, 
    juntos, irmos além. Muito obrigado! Esperamos que você se sinta orgulhoso de fazer parte 
    de uma multidão que decidiu se juntar para tirar do papel mais de 1.700 ideias criativas de todo o Brasil.
@@ -18,9 +18,9 @@ p
 
 p
   'Assista e #{link_to('compartilhe', 'http://www.facebook.com/sharer/sharer.php?u=https://www.youtube.com/watch?v=CRqXvKk5A1Q', target: :blank)} 
-   o vídeo com as hashtags #SomosMuitos e #Catarse200mil. 
+   o vídeo com as hashtags #SomosMuitos e #Entropia Coletiva200mil. 
    Vamos trazer mais gente para tirar ainda mais projetos do papel!
 
 p Grande abraço,
 
-p Equipe do Catarse   
+p Equipe da Entropia Coletiva   
