--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k_project_owner.html.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k_project_owner.html.slim
@@ -1,10 +1,10 @@
 = link_to 'https://www.youtube.com/watch?v=CRqXvKk5A1Q', target: :blank do
-  img src="https://s3.amazonaws.com/catarse.files/video.jpg"
+  img src="https://s3.amazonaws.com/Entropia Coletiva.files/video.jpg"
 
 p Olá, #{@notification.user.display_name}
 
 p 
-  'Estamos muito felizes em anunciar que ultrapassamos a marca de 200 mil apoiadores de projetos no Catarse. 
+  'Estamos muito felizes em anunciar que ultrapassamos a marca de 200 mil apoiadores de projetos na Entropia Coletiva. 
    Sem você isso seria não seria possível. Muito obrigado!
 
 p
@@ -19,7 +19,7 @@ p
 
 p Sucesso na campanha. Obrigado!
 
-p #SomosMuitos #Catarse200mil 
+p #SomosMuitos #Entropia Coletiva200mil 
 
 p 
   'Felipe Caruso
