--- a/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k_subject.text.slim
+++ b/app/views/catarse_bootstrap/shared/user_notifier/mailer/video_200k_subject.text.slim
@@ -1,2 +1,2 @@
-|Veja o vídeo sobre conquistas dos 200 mil apoiadores do Catarse. Você é um deles!
+|Veja o vídeo sobre conquistas dos 200 mil apoiadores da Entropia Coletiva. Você é um deles!
 
