lembrar senha OK

--- a/app/views/catarse_bootstrap/devise/passwords/edit.html.slim
+++ b/app/views/catarse_bootstrap/devise/passwords/edit.html.slim
@@ -1,6 +1,6 @@
 - content_for :title, t('.titles.site')
 
-/.w-container
+.w-container
   .u-marginbottom-10
     = render 'devise/shared/header'
   .w-row
