cadastrar pelo face

--- a/app/views/catarse_bootstrap/devise/registrations/new.html.slim
+++ b/app/views/catarse_bootstrap/devise/registrations/new.html.slim
@@ -30,11 +30,11 @@
             label.w-form-label.fontsize-smallest= t('.form.labels.newsletter')
           = form.button :submit, t('.form.inputs.submit'), class:'btn-login btn-medium'
 
-		/.separator
+		.separator
 		        .text.or = t('or')
 
 		.login-fb
-        /= link_to t('.form.inputs.facebook'), user_omniauth_authorize_path(provider: :facebook, locale: nil), class: 'btn-login btn-medium btn-fb' 
+        = link_to t('.form.inputs.facebook'), user_omniauth_authorize_path(provider: :facebook, locale: nil), class: 'btn-login btn-medium btn-fb' 
         /= link_to t('.form.inputs.facebook'), class: 'btn-login btn-medium btn-fb' 
 
       .fontsize-smallest.u-text-center.u-marginbottom-30
